Fix image overflow.

--- a/styles/components/Project.module.scss
+++ b/styles/components/Project.module.scss
@@ -12,7 +12,7 @@
   }
 
   >.image {
-    width: 380px;
+    width: 360px;
     height: 220px;
     position: relative;
     cursor: pointer;
